syntax = "proto3";

option go_package = "./pb";
package pb;

//proto代码生成
//goctl rpc protoc *.proto --go_out=../ --go-grpc_out=../  --zrpc_out=../ --style=goZero


message User{
  string  Name  = 1;
  string  Email = 2;
  string  Avatar = 3;
  uint64  Role = 4;
  string  Message = 5;
//  string  HashPassword = 6;
  string  StudentId = 6;
  string  College = 7;
  string   Major  = 8;
  string   Grade  = 9 ;
  string  Gender = 10;
  string  QQNumber  = 11;
  string  PhoneNumber  = 12;
}

message VerificationCodeRequest{
  string Email = 1;
}

message VerificationCodeResponse{
  string VerificationCode = 1;
}

message RegisterRequest{
  string Email = 1;
  string Password = 2;
  string VerifyCode = 3;
}

message RegisterResponse{
  int64 Id = 1;
}

message GetInfoRequest{
  int64 Id = 1;
}

message GetInfoResponse{
  User user = 1;
}

service usercenter{
  rpc getVerificationCode(VerificationCodeRequest)returns(VerificationCodeResponse);
  rpc register(RegisterRequest)returns(RegisterResponse);
  rpc getInfo(GetInfoRequest)returns(GetInfoResponse);
}